--- a/.editorconfig
+++ b/.editorconfig
@@ -1,12 +1,29 @@
-# EditorConfig is awesome: https://EditorConfig.org
-
-# top-most EditorConfig file
+# http://EditorConfig.org
 root = true
 
 [*]
 indent_style = space
 indent_size = 2
-end_of_line = crlf
+end_of_line = lf
+trim_trailing_whitespace = true
+insert_final_newline = true
 charset = utf-8
-trim_trailing_whitespace = false
-insert_final_newline = false
+
+[*.js]
+indent_style = space
+indent_size = 2
+
+[*.scss]
+indent_size = 4
+
+[*.sass]
+indent_size = tab
+indent_style = tab
+
+[*.css]
+indent_size = tab
+indent_style = tab
+
+[package.json]
+indent_style = space
+indent_size = 2
