--- a/package.json
+++ b/package.json
@@ -8,7 +8,28 @@
     "@babel/core": "^7.18.0",
     "@babel/preset-env": "^7.18.0",
     "@babel/register": "^7.17.7",
+    "babel-loader": "^8.2.5",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-root-import": "^6.6.0",
+    "browser-sync": "^2.27.10",
     "del": "^6.1.0",
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-avif": "^1.1.1",
+    "gulp-avif-css": "^1.0.4",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-cssbeautify": "^3.0.1",
+    "gulp-cwebp": "^4.0.2",
+    "gulp-file-include": "^2.3.0",
+    "gulp-group-css-media-queries": "^1.2.2",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "7.1.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-webp-avif-html": "^1.0.1",
+    "sass": "^1.52.1",
+    "webpack": "^5.72.1",
+    "webpack-stream": "^7.0.0"
   }
 }
